--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,24 @@ body {
     padding: 0;
 }
 
+.cabecera {
+    background: darkorange;
+    box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.75);
+    color: rgb(45, 46, 41);
+    font-weight: bold;
+    margin: 0;
+    padding: .5;
+}
+
+.cabecera span {
+    margin: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 .container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid grey;
     margin: 0 auto
@@ -17,4 +32,8 @@ body {
 
 .container h1 {
     font-size: 20px;
+}
+
+.post {
+    padding: 1em;
 }
